aks-configuration/product-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pproduct-api
  labels:
    app: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: user-api
          image: acrappfaluz3.azurecr.io/product-api:v1
          ports:
            - containerPort: 8082
---


apiVersion: v1
kind: Service
metadata:
  name: product-api
  labels:
    run: product-api
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: product-api
