aks-configuration/shopping-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
  labels:
    app: shopping-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-api
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      containers:
        - name: user-api
          image: acrappfaluz3.azurecr.io/shopping-api:v1
          ports:
            - containerPort: 8082
---


apiVersion: v1
kind: Service
metadata:
  name: shopping-api
  labels:
    run: shopping-api
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: shopping-api
