aks-configuration/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: acrappfaluz3.azurecr.io/userapi:v1
          ports:
            - containerPort: 8080
---


apiVersion: v1
kind: Service
metadata:
  name: user-api
  labels:
    run: user-api
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: user-api
